contrast fix for .duet-date__.date.is-today border

--- a/assets/styles/ui-components/_duetdatepicker.scss
+++ b/assets/styles/ui-components/_duetdatepicker.scss
@@ -35,7 +35,9 @@
             box-shadow: 0 0 0 2px var(--duet-color-border);
         }
     }
-
+    &__day.is-today{
+        box-shadow: inset 0 0 0 2px var(--duet-color-border);
+    }
 }
 
 .line {
